src/objects/User.object
<CustomObject>
    <fields>
        <fullName>EC_Associated_Contact__c</fullName>
        <label>EC Associated Contact</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_User_Logged_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is used to identify if a user has logged into the portal. This flag is implemented for Case Closure logic.</description>
        <label>Is User Logged In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Federation_Identifier__c</fullName>
        <formula>FederationIdentifier</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federation Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_CDM_User_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures the CDM User status</description>
        <label>CDM User Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EC_CDM_User__c</fullName>
        <description>US-74960:Raghav:26/06/2019:This field will be used for mapping between CDM and user object.</description>
        <externalId>true</externalId>
        <label>External UserKey</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EC_Portal_Access_Role__c</fullName>
        <description>Customer Roles</description>
        <label>Portal Access Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Basic+</fullName>
                </value>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Buyer+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Redemption_URL__c</fullName>
        <label>Completion URL</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__CC_CurrencyCode__c</fullName>
        <description>Customized Currency field for Orgs which don&apos;t have  Multi-currency feautre.</description>
        <label>Currency</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CompanyType__c</fullName>
        <label>CompanyType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ISP</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__ContactTypeRole__c</fullName>
        <description>CloudCraze contact type role</description>
        <label>Contact Type Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Researcher/Post Doc</fullName>
                    <default>true</default>
                    <label>Researcher/Post Doc</label>
                </value>
                <value>
                    <fullName>Purchasing Agent</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Lab Manager</fullName>
                </value>
                <value>
                    <fullName>Department Chair</fullName>
                </value>
                <value>
                    <fullName>Principal Investigator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__DataId__c</fullName>
        <description>B2B Commerce internal use only except when used with ccApiTestData.</description>
        <externalId>true</externalId>
        <inlineHelpText>B2B Commerce internal use only except when used with ccApiTestData.</inlineHelpText>
        <label>DataId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the current user gets qualified for the tax-exempt</description>
        <label>Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__User_Industry__c</fullName>
        <description>CloudCraze user industry</description>
        <label>User Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic research</fullName>
                    <default>true</default>
                    <label>Academic research</label>
                </value>
                <value>
                    <fullName>commercial</fullName>
                </value>
                <value>
                    <fullName>government</fullName>
                </value>
                <value>
                    <fullName>OEM-Reseller</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__User_Salutation__c</fullName>
        <description>CloudCraze user salutation</description>
        <label>User Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr</fullName>
                    <default>true</default>
                    <label>Mr</label>
                </value>
                <value>
                    <fullName>Mrs</fullName>
                </value>
                <value>
                    <fullName>Ms</fullName>
                </value>
                <value>
                    <fullName>Dr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>et4ae5__Default_ET_Page__c</fullName>
        <label>Default Marketing Cloud Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_MID__c</fullName>
        <label>Default MID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetUsername__c</fullName>
        <label>Marketing Cloud Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTarget_OAuth_Token__c</fullName>
        <label>@deprecated</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud User</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATED_BY_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Inactive_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Users</label>
    </listViews>
    <listViews>
        <fullName>Search_Active_Users_by_Profile</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Sales Rep</value>
        </filters>
        <label>Search Active Users by Profile</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>User_Search</fullName>
        <booleanFilter>(1 AND 2) OR 3 OR 4 OR 5</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>startsWith</operation>
            <value>pa</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>startsWith</operation>
            <value>rock</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>equals</operation>
            <value>phillip.hendricks2@sodexo.com,david.mcelhinney@sodexo.com</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>matthew.mcbain@ecolab.com,cara.egel@ecolab.com</value>
        </filters>
        <filters>
            <field>CORE.USERS.SAML_SUBJECT</field>
            <operation>equals</operation>
            <value>ktrac276@marriott.com</value>
        </filters>
        <label>User Search</label>
        <language>en_US</language>
    </listViews>
</CustomObject>